--- a/.github/workflows/scheduled-build.yml
+++ b/.github/workflows/scheduled-build.yml
@@ -21,9 +21,9 @@ jobs:
         run: npm install
 
       - name: Build project
-        run: npx astro build
+        run: npx astro build --yes
 
       - name: Deploy to Vercel
         env:
           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
-        run: npx vercel --prod --confirm
+        run: npx vercel --prod --yes
