--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
-    "@astrojs/tailwind": "^5.1.5",
     "@astrojs/vercel": "^8.0.4",
     "@fontsource-variable/onest": "^5.0.4",
-    "astro": "^5.1.10",
-    "tailwindcss": "^3.4.4",
+    "@tailwindcss/vite": "^4.1.1",
+    "astro": "^5.5.6",
+    "tailwindcss": "^4.1.1",
     "typescript": "^5.5.3"
   }
 }
