styles: cambio de diseño a cards en experiencia laboral y cambio de color genral a white

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
       "@components/*": ["./src/components/*"],
       "@types/*": ["./src/types/*"],
       "@layouts/*": ["./src/layouts/*"],
-      "@api/*": ["./src/api/*"]
+      "@api/*": ["./src/api/*"],
+      "@utils/*": ["./src/utils/*"]
     }
   }
 }
